# DDS_for_Android_example

./: .gitignore  CMakeLists.txt  readme.rst  workspace_DDS.code-workspace
src/: publisher.cpp  subscriber.cpp  test.idl
